Continuação da estruturação

--- a/oraçao.html
+++ b/oraçao.html
@@ -13,6 +13,7 @@
         
     </header>
     <main>
+        <!-- ------------------------oracao---------------------------------------- -->
         <pre>
             <p class="parte01">
                 Levanto-me, neste dia que amanhece,
@@ -114,12 +115,19 @@
                 Pelo Criador da Criação.
             </p>
         </pre>  
+        <!-- ---------------------------------------------------------------- -->
+
+        <!-- conteúdo adicional direcionado a um site----------------------- -->
         <aside class="saiba-mais">
         <p>Saiba mais sobre <a href="https://bibliotecacatolica.com.br/blog/devocao/couraca-de-sao-patricio/" rel="external" target="_blank" title="Consultar História">quem foi São Patrício</a>, Apóstolo da Irlanda, e confira a <a href="https://bibliotecacatolica.com.br/blog/devocao/couraca-de-sao-patricio/" rel="external" target="_blank">oração na versão em latim</a></p>
         <img src="sao-patricio-imagem2.jpg" alt="Imagem de São Patrício" id="São-Patrício">
         </aside>
+        <!-- ------------------------------------------------------------------------ -->
+
+        <!-- ----------------conteúdo adicional direcionado ao youtube-------------------- -->
         <p>Confira também esse vídeo da oração de São Patrício, para ouvir enquanto realiza outras tarefas!</p>
         <iframe width="710" height="480" src="https://www.youtube.com/embed/qHDPJxovEEU" title="Oração da couraça de São Patrício" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+        <!-- ------------------------------------------------------------------------- -->
     </main>
     <footer>
       Este site foi apenas um teste pessoal do autor em tentar criar algo com apenas o que sabia até o dado momento. Um primeiro site pensado de forma autônoma e que tá cheio de gambiarras kkkkk. Enfim, que seja só o começo!
